--- a/SyncFileFolder/packages.config
+++ b/SyncFileFolder/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
+  <package id="MetadataExtractor" version="2.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net461" />
   <package id="Winform.Metroframework" version="1.4.0" targetFramework="net461" />
   <package id="Winform.Metroframework.Design" version="1.4.0" targetFramework="net461" />
   <package id="WinFromSkin" version="1.0.2" targetFramework="net461" />
+  <package id="XmpCore" version="5.1.3.1" targetFramework="net461" />
 </packages>
