--- a/SyncFileFolder/packages.config
+++ b/SyncFileFolder/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="MetadataExtractor" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net461" />
   <package id="Winform.Metroframework" version="1.4.0" targetFramework="net461" />
